<resources>
    <string name="app_name">El Saborcito</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="welcome">Bienvenido</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Acceder</string>
    <string name="forgot_password">Olvidaste la Contrasena?</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="register_here">Registrate aquí</string>
    <string name="inventory">Inventario</string>
    <string name="submit">add</string>
    <string name="todays_sale">Ventas hoy</string>
    <string name="gain_today">Ganancia hoy</string>
    <string name="new_sale">Nueva venta</string>
    <string name="sales">Ventas</string>
    <string name="settings">Configuracion</string>
    <string name="last_sale">Ultima venta</string>
    <string name="product_name">Nombre de producto:</string>
    <string name="stock">Stock:</string>
    <string name="add_product">AGREGAR PRODUCTO</string>
    <string name="insert_product">Ingrese productos para inventario</string>
    <string name="product_name_hint">Cerveza</string>
    <string name="available">Cantidad disponible:</string>
    <string name="available_hint">10</string>
    <string name="add">Agregar</string>
    <string name="search_term_not_found">No se encontraron resultados para tu búsqueda</string>
    <string name="search_by_name">Buscar por nombre</string>
    <string name="price">Precio</string>
    <string name="sale_price">Precio de Venta: </string>
    <string name="message_empty">No hay datos\nDisponibles</string>
    <string name="total_products">Total de productos</string>
    <string name="total_cost">Costo Total</string>
    <string name="create_product">Crear Producto</string>
    <string name="category">Categoria:</string>
    <string name="category_hint">Bebida</string>
    <string name="add_category_name">Nombre (Obligatorio)</string>
    <string name="create">Crear</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
</resources>