<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.androidapp.elsaborcito.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/medium_guide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <View
            android:id="@+id/topView"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:background="@drawable/ic_wave_ic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topView" />

        <TextView
            android:id="@+id/topText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/blacklist"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/leftGuideLine"
            app:layout_constraintRight_toLeftOf="@id/rightGuideLine"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bolditalic"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/welcome"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/leftGuideLineNew"
            app:layout_constraintRight_toLeftOf="@+id/rightGuideLineNew"
            app:layout_constraintTop_toBottomOf="@+id/medium_guide" />


        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/curve_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:padding="16dp"
            android:text="@={viewModel.username}"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/curve_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:ems="10"
            app:okKeyboardClickListener="@{viewModel.okKeyboardClickListener}"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:text="@={viewModel.password}"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/curve_button"
            android:onClick="@{v -> viewModel.onLogInButtonClick()}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/leftGuideLine"
            app:layout_constraintRight_toLeftOf="@id/rightGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />


        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:clickable="true"
            android:onClick="@{(v)-> viewModel.onForgotPasswordButtonClick()}"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toTopOf="@+id/account"
            app:layout_constraintLeft_toRightOf="@id/leftGuideLine"
            app:layout_constraintRight_toLeftOf="@id/rightGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_account"
            app:layout_constraintLeft_toRightOf="@id/leftGuideLine"
            app:layout_constraintRight_toLeftOf="@+id/register"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="@{(v)-> viewModel.onRegisterButtonClick()}"
            android:text="@string/register_here"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/account"
            app:layout_constraintLeft_toRightOf="@+id/account"
            app:layout_constraintRight_toLeftOf="@id/rightGuideLine"
            app:layout_constraintTop_toTopOf="@id/account" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideLine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideLineNew"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideLineNew"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <!-- [Progress Bar] -->

        <include
            layout="@layout/inc_progress_background"
            app:loadingState="@{viewModel}"/>

        <include
            layout="@layout/inc_progress"
            app:loadingState="@{viewModel}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
